# libsquish

./: CMakeLists.txt  squish.cpp  squish.h  vcpkg.json
extra/: squishpng.cpp
